--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "sender": "nodemon senderServer.ts",
-    "receiver": "nodemon receiverServer.ts"
+    "receiver": "nodemon receiverServer.ts",
+    "offlineTest": "ts-node offlineTest.ts"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "@aws-sdk/client-kms": "^3.295.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jose": "^4.14.1",
     "node-fetch": "^2.6.9"
   }
 }
